feat: basic website

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,10 @@
 ---
-
+import Layout from '../layouts/Default.astro';
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout>
+  <div class="p-8">
+    <h1 class="text-lg text-slate-50">Not yet ready</h1>
+    <p>We're glad you're interested in pipelet.io, however we just are not quite ready to show anything yet. Please check for future announcements from Midstall Software.</p>
+  </div>
+</Layout>
